# adventofcode2019

./: Cargo.toml
2019/: Cargo.toml
2019/src/: 01.rs  02.rs  03.rs  04.rs  08.rs  22.rs
2019/src/intcode/: lib.rs
2020/: Cargo.toml
2020/benches/: all.rs
2020/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  lib.rs  part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs  part_08.rs  part_09.rs  part_10.rs  part_11.rs
2021/: README.md  build.zig
2021/src/: 01.zig  02.zig
src/: 03.rs  04.rs  06.rs  16.rs  22.rs
