[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["wcampbell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.9.1"

[lib]
name = "intcode"
path = "src/intcode/lib.rs"

[[bin]]
name = "01"
path = "src/01.rs"

[[bin]]
name = "02"
path = "src/02.rs"

[[bin]]
name = "03"
path = "src/03.rs"

[[bin]]
name = "04"
path = "src/04.rs"

[[bin]]
name = "06"
path = "src/06.rs"

[[bin]]
name = "08"
path = "src/08.rs"

[[bin]]
name = "16"
path = "src/16.rs"

[[bin]]
name = "22"
path = "src/22.rs"
