[package]
name = "advent_of_code2020"
version = "0.1.0"
authors = ["wcampbell <wcampbell1995@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "all"
harness = false

[[bin]]
name = "01"
path = "src/01.rs"

[[bin]]
name = "02"
path = "src/02.rs"

[[bin]]
name = "03"
path = "src/03.rs"

[[bin]]
name = "04"
path = "src/04.rs"

[[bin]]
name = "05"
path = "src/05.rs"
